--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 			<a href="">HISS</a>
 		</div>
 		<ul class="navbar__menu">
-			<li><a class="menu__items" href="#bottom">hiss</a></li>
-			<li><a class="menu__items" href="#">whitepawper</a></li>
-			<li><a class="menu__items" href="#">roadmap</a></li>
+			<li><a class="menu__items" href="#nav1">hiss</a></li>
+			<li><a class="menu__items" href="#nav2">whitepawper</a></li>
+			<li><a class="menu__items" href="#nav3">roadmap</a></li>
 			<li><a class="menu__items" href="https://exchange.pancakeswap.finance" target="_blank">buy hiss</a></li>
 		</ul>
 		<div class="navbar__icons">
@@ -73,7 +73,7 @@
 	</div>
 	<!-- 이상 랜딩페이지 완료-->
 	
-	<div class="intro">
+	<div id="nav1" class="intro">
 		<div class="left_container">
 			<div class="intro__text">
 				<p id="intro_title">What is <font face="Underdog">HISS</font>?</p>
@@ -101,7 +101,7 @@
 	</div>
 	<!--이상 인트로 완료-->
 	
-	<div class="whitepaper">
+	<div id="nav2" class="whitepaper">
 		<div class="whitepaper_title">
 			Whitepawper
 			<i id="paw_in_title" class="fas fa-paw"></i>
@@ -112,7 +112,7 @@
 	</div>
 	<!--이상 백서 완료-->
 	
-	<div class="roadmap">
+	<div id="nav3" class="roadmap">
 		<div class="roadmap_title">
 			Roadmap
 		</div>
