--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		</div>
 		<ul class="navbar__menu">
 			<li><a class="menu__items" href="#hiss">hiss</a></li>
-			<li><a class="menu__items" href="#whitepawpar">whitepawper</a></li>
+			<li><a class="menu__items" href="#whitepawper">whitepawper</a></li>
 			<li><a class="menu__items" href="#roadmap">roadmap</a></li>
 			<li><a class="menu__items" href="https://exchange.pancakeswap.finance" target="_blank">buy hiss</a></li>
 		</ul>
