--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
 			<i class="fas fa-bars"></i>
 		</a>
 	</nav>
-	<!--오케이 이제 navbar은 완성함-->
 
 	<div class="landing_page">
 		<div class="main__title">
@@ -70,8 +69,7 @@
 		<div class="paws">
 			<image id="paws" src="images/paws.png">
 		</div>
-	</div>
-	<!-- 이상 랜딩페이지 완료-->
+	</div
 	
 	<div id="hiss" class="intro">
 		<div class="left_container">
@@ -99,7 +97,6 @@
 			<img id="intro_img" src="images/intro.png">
 		</div>
 	</div>
-	<!--이상 인트로 완료-->
 	
 	<div id="whitepawper" class="whitepaper">
 		<div class="whitepaper_title">
@@ -110,7 +107,6 @@
 			<image id="whitepaper_image" src="images/whitepaper.png">
 		</div>
 	</div>
-	<!--이상 백서 완료-->
 	
 	<div id="roadmap" class="roadmap">
 		<div class="roadmap_title">
