--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		<div class="paws">
 			<image id="paws" src="images/paws.png">
 		</div>
-	</div
+	</div>
 	
 	<div id="hiss" class="intro">
 		<div class="left_container">
