--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<image id="main__logo" src="images/main_logo.png">
 		</div>
 		<div class="contract">
-			<p id="contract">0x1D189e28eA0888AaD8200Fa5Dfb16bEeA53C6627</p>
+			<p id="contract" href="https://bscscan.com/address/0x1D189e28eA0888AaD8200Fa5Dfb16bEeA53C6627">0x1D189e28eA0888AaD8200Fa5Dfb16bEeA53C6627</p>
 		</div>
 		<div class="description_1">
 			<p id="des_1">Listen carefully
