--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
 		</div>
 		<div class="roadmap_image">
 			<image id="roadmap_image" src="images/roadmap.png">
+			<image id="roadmap_mobile" src="images/roadmap_mobile.png">
 		</div>
 	</div>
 </body>
