--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 					Two. No initial burning to Vitalik or CZ. The value we create here should not be subject to the whims of the multi-billioniares.
 				</p>
 				<p id="points">
-					Three. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras suscipit mollis lectus nec mollis. Proin ligula sapien, tempus et fringilla id, condimentum eu enim.
+					Three. HISS appreciates in value due to 1 percent burn for every transaction. Long term HODLERs can sit back and profit.
 				</p>
 			</div>
 			<div class="intro_footnote">
