--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		</ul>
 		<div class="navbar__icons">
 
-			<a href="https://twitter.com/d0h0k1" target="_blank" class="hyperlink">
+			<a href="https://twitter.com/hissclub" target="_blank" class="hyperlink">
 				<li><i class="fab fa-twitter"></i></li>	
 			</a>
 			<a href="https://telegram.org/" target="_blank" class="hyperlink">
