--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		</ul>
 		<div class="navbar__icons">
 
-			<a href="https://twitter.com/hissclub" target="_blank" class="hyperlink">
+			<a href="https://twitter.com/d0h0k1" target="_blank" class="hyperlink">
 				<li><i class="fab fa-twitter"></i></li>	
 			</a>
 			<a href="https://telegram.org/" target="_blank" class="hyperlink">
@@ -90,6 +90,11 @@
 		</div>
 		<div class="intro__img">
 			<img id="intro_img" src="images/intro.png">
+		</div>
+		<div class="intro_footnote">
+			<p id="acknowledgement">
+				Inspired by Tardar Sauce "the Grumpy Cat"
+			</p>
 		</div>
 	</div>
 	
